feat: get author,genre,magazine list
